# hyprmoon

./: .gitignore  CLAUDE.md  Dockerfile.build  Dockerfile.deb-builder  Dockerfile.dev  Dockerfile.helix-base  Dockerfile.helix-simple  Dockerfile.minimal-test  Dockerfile.moonlight  Dockerfile.raw-builder  Dockerfile.ubuntu-baseline-test  Dockerfile.ubuntu-hyprland  Dockerfile.ubuntu-hyprmoon  Dockerfile.ubuntu-system-wlroots  Dockerfile.ubuntu-test  Dockerfile.wlroots-minimal  Dockerfile.wlroots-test  HYPRMOON-INSTALL.md  HYPRMOON_README.md  HYPRMOON_VERSION.txt  MAINTAINERS.md  MOONLIGHT_INTEGRATION_COMPLETE.md  MOONLIGHT_INTEGRATION_PLAN.md  NEXT.md  README.md  build-deb.sh  build-metrics.csv  build-raw-deb.sh  build.sh  capture_green_proof.py  capture_stream_test.py  container-build.sh  debug-compose.yml  demo_integration_test.py  design.md  docker-compose.yml  final_integration_test.py  green_client  green_client.c  hyprland_0.41.2+ds-1.3.debian.tar.xz  (+29 more)
.claude/: settings.local.json
build-simple/: CMakeCache.txt  Makefile  cmake_install.cmake
build-test/: CMakeCache.txt
deb-output/: hyprmoon_1.0-1_amd64.changes
hyprland-0.41.2+ds/: CMakeLists.txt  Makefile
hyprland-0.41.2+ds/debian/: README.source  changelog  control  debhelper-build-stamp  files  hyprland-backgrounds.install  hyprmoon.install  hyprmoon.substvars  rules  watch
hyprland-0.41.2+ds/protocols/: alpha-modifier-v1.cpp  alpha-modifier-v1.hpp  cursor-shape-v1.cpp  ext-foreign-toplevel-list-v1.cpp  ext-foreign-toplevel-list-v1.hpp  ext-idle-notify-v1.cpp  ext-idle-notify-v1.hpp  ext-session-lock-v1.cpp  fractional-scale-v1.cpp  fractional-scale-v1.hpp  hyprland-focus-grab-v1.cpp  hyprland-global-shortcuts-v1-protocol.c  hyprland-toplevel-export-v1-protocol.c  idle-inhibit-unstable-v1.cpp  input-method-unstable-v2.cpp  kde-server-decoration.cpp  kde-server-decoration.hpp  keyboard-shortcuts-inhibit-unstable-v1.cpp  keyboard-shortcuts-inhibit-unstable-v1.hpp  linux-dmabuf-v1.cpp  linux-dmabuf-v1.hpp  pointer-constraints-unstable-v1.cpp  pointer-constraints-unstable-v1.hpp  pointer-gestures-unstable-v1.cpp  pointer-gestures-unstable-v1.hpp  presentation-time.cpp  presentation-time.hpp  primary-selection-unstable-v1.cpp  primary-selection-unstable-v1.hpp  relative-pointer-unstable-v1.cpp  tablet-v2.cpp  tablet-v2.hpp  tearing-control-v1.cpp  text-input-unstable-v3.cpp  viewporter.cpp  viewporter.hpp  wayland-drm.cpp  (+21 more)
hyprland-0.41.2+ds/src/moonlight/: MoonlightManager.cpp  MoonlightManager.hpp  meson.build
hyprland-0.41.2+ds/src/moonlight/control/: control.cpp  control.hpp  input_handler.cpp  input_handler.hpp
hyprland-0.41.2+ds/src/moonlight/core/: events.hpp  gstreamer.hpp  mouse.cpp  reflectors.hpp  uinput.cpp  uinput.hpp  utils.hpp  virtual-display.cpp  virtual-display.hpp
hyprland-0.41.2+ds/src/moonlight/crypto/: CryptoStub.cpp
hyprland-0.41.2+ds/src/moonlight/docker/: formatters.hpp
hyprland-0.41.2+ds/src/moonlight/gst-plugin/: HyprlandFrameSource.hpp  audio.hpp  gstrtpmoonlightpay_audio.cpp  utils.hpp  video.hpp
hyprland-0.41.2+ds/src/moonlight/gstreamer/: GStreamerCore.cpp  GStreamerCore.hpp
hyprland-0.41.2+ds/src/moonlight/input/: InputManager.cpp  InputManager.hpp
hyprland-0.41.2+ds/src/moonlight/managers/: MoonlightManager.cpp  MoonlightManager.hpp
hyprland-0.41.2+ds/src/moonlight/protocol/: RTSPStub.cpp  moonlight.cpp
hyprland-0.41.2+ds/src/moonlight/protocol/crypto/src/: aes.hpp  sign.hpp  x509.cpp
hyprland-0.41.2+ds/src/moonlight/protocol/moonlight/: control.hpp  protocol.hpp
hyprland-0.41.2+ds/src/moonlight/protocol/rtsp/: parser.hpp
hyprland-0.41.2+ds/src/moonlight/rest/: RestServerStub.cpp  custom-https.cpp  endpoints.hpp  helpers.hpp  rest.hpp  servers.cpp
hyprland-0.41.2+ds/src/moonlight/runners/: child_session.hpp  docker.hpp  process.cpp  process.hpp
hyprland-0.41.2+ds/src/moonlight/state/: config.hpp  configTOML.cpp  data-structures.hpp  sessions.hpp
hyprland-0.41.2+ds/src/moonlight/streaming/: StreamingManager.cpp  StreamingManager.hpp  streaming.hpp
hyprland-0.41.2+ds/src/moonlight/streaming/rtp/: udp-ping.cpp  udp-ping.hpp
hyprland-0.41.2+ds/src/moonlight/streaming/rtsp/: commands.hpp  net.hpp
hyprland-0.41.2+ds/src/moonlight/voice/: WhisperManager.cpp
hyprland-0.41.2+ds/src/moonlight/webrtc/: WebRTCManager.cpp  WebRTCManager.hpp
hyprland-0.41.2+ds/src/moonlight/wolf-impl/: WolfMoonlightServer.cpp  WolfMoonlightServer.hpp
src/: Compositor.cpp  meson.build
src/helpers/: LibinputStubs.hpp  Monitor.cpp
src/managers/: CursorManager.cpp  KeybindManager.cpp  PointerManager.cpp
src/moonlight/: meson.build
src/moonlight/control/: input_handler.cpp
src/moonlight/core/: logger.hpp
src/moonlight/gst-plugin/: HyprlandFrameSource.cpp  HyprlandFrameSource.hpp
src/moonlight/managers/: MoonlightManager.cpp  MoonlightManager.hpp
src/moonlight/protocol/crypto/src/: sign.hpp
src/moonlight/state/: configTOML.cpp
src/moonlight/state/default/: config.include.toml  config.v4.toml  config.v5.toml
src/moonlight/stubs/: MoonlightStubs.cpp
src/moonlight/voice/: WhisperManager.cpp  WhisperManager.hpp  voice-api-examples.md
src/moonlight/webrtc/: WebRTCManager.cpp  WebRTCManager.hpp  example-client.html
src/moonlight/wolf-impl/: WolfMoonlightServer.cpp
src/protocols/core/: Shm.cpp
src/render/: Renderer.cpp
src/xwayland/: XWM.cpp
test_config/: capture_stream.sh  create_real_green_video.sh  debug_aquamarine.sh  debug_aquamarine_deep.sh  debug_aquamarine_logs.sh  debug_crash_report.sh  debug_crash_report_fixed.sh  debug_environment.sh  green_client  hyprland.conf  real_capture_stream.sh  real_e2e_test.sh  real_green_client.c  simple_green_client  simple_green_client.c  test_moonlight_binary.sh  verify_moonlight_stream.sh
test_incremental_dockerfiles/: README.md  run_tests.sh  test_dockerfile_incremental.txt  test_dockerfile_standard.txt  test_dockerfile_template.txt  test_f_to_i.txt  test_i_idempotent.txt  test_i_to_f.txt  test_i_to_i.txt  test_sed_operations.py
test_output/: REAL_RESULTS.md  RESULTS.md  moonlight_simulation.json
(+55 files in other folders)
